[gd_scene load_steps=2 format=3 uid="uid://bxr4kj8m2nvwp"]

[ext_resource type="Script" path="res://scripts/ui/species_stats_bar.gd" id="1_stats_bar"]

[node name="SpeciesStatsBar" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
mouse_filter = 2
script = ExtResource("1_stats_bar")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="SpeciesInfo" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeciesName" type="Label" parent="HBoxContainer/SpeciesInfo"]
layout_mode = 2
text = "Fire Ant"
theme_type_variation = "HeaderMedium"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/SpeciesInfo"]
layout_mode = 2

[node name="SpeciesIcon" type="TextureRect" parent="HBoxContainer/SpeciesInfo/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)
texture_filter = 0
expand_mode = 3
stretch_mode = 5

[node name="Difficulty" type="Label" parent="HBoxContainer/SpeciesInfo/HBoxContainer"]
layout_mode = 2
text = "★★☆"
theme_type_variation = "HeaderSmall"

[node name="Separator1" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="CombatStats" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsTitle" type="Label" parent="HBoxContainer/CombatStats"]
layout_mode = 2
text = "Combat Stats"
theme_type_variation = "HeaderSmall"
horizontal_alignment = 1

[node name="StatsContainer" type="HBoxContainer" parent="HBoxContainer/CombatStats"]
layout_mode = 2

[node name="AttackStat" type="RichTextLabel" parent="HBoxContainer/CombatStats/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "ATK: [color=green]1.3[/color]"
fit_content = true

[node name="DefenseStat" type="RichTextLabel" parent="HBoxContainer/CombatStats/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "DEF: [color=white]1.1[/color]"
fit_content = true

[node name="SpeedStat" type="RichTextLabel" parent="HBoxContainer/CombatStats/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "SPD: [color=white]1.0[/color]"
fit_content = true

[node name="Separator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="ResourceStats" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResourceTitle" type="Label" parent="HBoxContainer/ResourceStats"]
layout_mode = 2
text = "Resource Efficiency"
theme_type_variation = "HeaderSmall"
horizontal_alignment = 1

[node name="ResourceContainer" type="HBoxContainer" parent="HBoxContainer/ResourceStats"]
layout_mode = 2

[node name="FoodEfficiency" type="RichTextLabel" parent="HBoxContainer/ResourceStats/ResourceContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Food: [color=red]-10%[/color]"
fit_content = true

[node name="MaterialEfficiency" type="RichTextLabel" parent="HBoxContainer/ResourceStats/ResourceContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Materials: [color=red]-20%[/color]"
fit_content = true

[node name="Separator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Abilities" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AbilitiesTitle" type="Label" parent="HBoxContainer/Abilities"]
layout_mode = 2
text = "Special Abilities"
theme_type_variation = "HeaderSmall"
horizontal_alignment = 1

[node name="AbilitiesList" type="Label" parent="HBoxContainer/Abilities"]
layout_mode = 2
text = "Fire Attack, Heat Resistance"
autowrap_mode = 2
clip_contents = true
